# torch_sdf

./: LICENSE  README.md  pyproject.toml
docs/: conf.py  index.rst
examples/: opt_test.py  sphere_opt.py
src/torch_sdf/: __init__.py
src/torch_sdf/functional/: __init__.py  sdfs.py
src/torch_sdf/ops/: binary_ops.py  unary_ops.py
src/torch_sdf/sdfs/: __init__.py  affine.py  compound.py  geom.py  neural.py  repair.py  sdf.py  transform.py
